--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Omwebsites - Agencia de Diseño Web y Marketing</title>
+    <title>Satan Temple</title>
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon.png">
 
     <link rel=manifest href="https://ionic.io/ionicons/manifest.json">
-<meta property=og:title content="En Omwebsites diseñamos sitios web a medida preparados para campañas de marketing digital. Con más de 10 años desarrollando  experiencias innovadoras en 5 paises nuestros precios son competitivos.">
-<meta property=og:description content="En Omwebsites diseñamos sitios web a medida preparados para campañas de marketing digital. Con más de 10 años desarrollando  experiencias innovadoras en 5 paises nuestros precios son competitivos.">
+<meta property=og:title content="Satan Temple">
+<meta property=og:description content="Werlcome to the Satan temple">
 <meta property=og:type content=website>
-<meta property=og:url content="https:www.omwebsites.com">
+<meta property=og:url content="https://satantemple.github.io">
 <meta property=og:image content="https://scontent.fbog2-4.fna.fbcdn.net/v/t39.2365-6/241505374_384968079990644_7017334203047759807_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ad8a9d&_nc_eui2=AeERv7VpMZe-jVzR1npZsIgE5iPm7bZvc9nmI-bttm9z2edCnPR7jSVvOkAZuKf-pxsBbngdrI17rS507wIuYqJd&_nc_ohc=x5VI8aIRNAEAX_1Sa46&_nc_ht=scontent.fbog2-4.fna&oh=d90eb49a7505da93ddf8385828b9505e&oe=61870163">
 <meta name=twitter:card content=summary_large_image>
 <meta name=twitter:creator content=@ionicframework>
@@ -32,9 +32,9 @@
 <meta name="msapplication-TileImage" content="https://ionic.io/ionicons/assets/img/meta/ms-icon-144x144.png">
 <meta name="theme-color" content=#16161d>
 
-    <meta name="description" content="En Omwebsites diseñamos sitios web a medida preparados para campañas de marketing digital. Con más de 10 años desarrollando  experiencias innovadoras en 5 paises nuestros precios son competitivos.">
-    <meta name="keywords" content="paginas web, pagina web, diseño web, marketing digital, aplicaciones, redes sociales, freelance, freelancer, Omwebsites, desarrollo web, capacitaciones, cursos, tecnologia">
-    <meta name="author" content="Omwebsites">
+    <meta name="description" content="Welcome to Satan Temple">
+    <meta name="keywords" content="satan">
+    <meta name="author" content="Satan Temple">
 </head>
 <body>
 
