--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="es">
 <head>
     <meta charset="utf-8">
@@ -111,8 +110,14 @@ function right01()
 <!--LOADER-->
 <section id="loader" class="loader">
 </section>
+ <section class="temple">
+   <nav id="moon"></nav>
+   <article class="love"></article>
+   <nav id="sun"></nav>
+ </section>
 
 <style type="text/css">
+  .temple{width:100%;height:100%;background:red;} .love{background:black;width:100%;height:100%;}
     #loader{text-align:center;z-index: 20;position: fixed;overflow: hidden;width: 100%;height: 100%;padding-top:15%;top:0;left: 0;}
     .loader{display: none;background: #00aad4 url(static/img/logo.png)no-repeat center center;background-size:60px;}
     .loadersm{display: block;background: #00aad4 url(static/img/logo.png)no-repeat center center;background-size:60px;}
