--- a/index.html
+++ b/index.html
@@ -110,18 +110,30 @@ function right01()
 <!--LOADER-->
 <section id="loader" class="loader">
 </section>
- <section class="temple">
+ <section id="temple">
    <nav id="moon"></nav>
-   <article class="love"></article>
+   <article class="love">
+     <div id="sigil"></div>
+     <h1>Welcome to temple of true</h1>
+     <h2>On this site users around the world can share your own experiences about the true and love of master.</h2>
+     <a class="send" href="#">Enjoy</a>
+   </article>
    <nav id="sun"></nav>
  </section>
 
 <style type="text/css">
-  .temple{width:100%;height:100%;background:red;} .love{background:black;width:100%;height:100%;}
+  html{width:100%;height:100%;}
+  body{width:100%;height:100%;} 
+  #sigil{width:70px;height:70px;background:red;margin:0 auto;border-radius:50%;margin-bottom:30px;}
+  .send{padding:10px 50px;background:red;color:black;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);} 
+#sun{position:fixed;bottom:0;left:0;width:100%;height:60px;background:black;}
+  #temple{width:100%;height:100%;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/01.jpg);no-repeat center center;background-size:100%;} .love{background:rgba(0,0,0,0.7);width:100%;height:100%;padding:100px;text-align:center;}
+  .love h1{color:white;font-size:44px;}
+  .love h2{color:white;font-size:22px;padding:20px;}
     #loader{text-align:center;z-index: 20;position: fixed;overflow: hidden;width: 100%;height: 100%;padding-top:15%;top:0;left: 0;}
-    .loader{display: none;background: #00aad4 url(static/img/logo.png)no-repeat center center;background-size:60px;}
-    .loadersm{display: block;background: #00aad4 url(static/img/logo.png)no-repeat center center;background-size:60px;}
-    .loadersml{display: block;background: #00aad4 url(static/img/logo.png)no-repeat center center;background-size:80px;opacity: 0.8}
+    .loader{display: none;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
+    .loadersm{display: block;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
+    .loadersml{display: block;background: black url(static/img/logo.png)no-repeat center center;background-size:80px;opacity: 0.8}
     .loaders{display: none;}
 </style>
 
