--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ function right01()
    </article>
    <nav id="sun">
      <a href="https://www.facebook.com/satantemple"><ion-icon name="logo-facebook"></ion-icon> Members</a>
-     <a href="https://www.paypal.com/paypalme/almaginet"><ion-icon name="logo-paypal"></ion-icon> Payments</a>
+     <a href="https://biz.payulatam.com/L0ccfcfF9178D3D"><ion-icon name="logo-paypal"></ion-icon> Payments</a>
    </nav>
  </section>
 
