--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Satan Temple</title>
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon.png">
 <!-- IONIC-->
+    <script src="splide.min.js"></script>
+    <link rel="stylesheet" href="splide.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
@@ -107,10 +109,26 @@ function right01()
      <a href="mailto:satantemplecom@gmail.com"> <ion-icon name="mail-unread-outline"></ion-icon> Contact us</a>
    </nav>
    <article class="love">
-     <div id="sigil"></div>
-     <h1>Welcome to temple of true</h1>
-     <h2>On this site users around the world can share your own experiences about the true and love of our master.</h2>
-     <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+        <div class="splide">
+          <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
+                         <div id="sigil"></div>
+                         <h1>Welcome to temple of true</h1>
+                         <h2>On this site users around the world can share your own experiences about the true and love of our master.</h2>
+                         <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                    </li>
+                    <li class="splide__slide">
+                         <h1>Welcome to temple of love</h1>
+                         <h2>Making regular payments you can acces to special content.</h2>
+                         <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                    </li>
+                    <li class="splide__slide">
+                    
+                    </li>
+                </ul>
+          </div>
+        </div>
    </article>
    <nav id="sun">
      <a href="https://www.facebook.com/satantemple"><ion-icon name="logo-facebook"></ion-icon> Members</a>
