--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@ function right01()
     loader();
     }
 </script>
-  <!--LOADER-->
+  <!--SPLIDER-->
+    <script type="text/javascript">
+        var splide = new Splide( '.splide' );
+        splide.mount();
+    </script>
+
 
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
