--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Satan Temple</title>
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon.png">
 <!-- IONIC-->
-    <script src="splide.min.js"></script>
-    <link rel="stylesheet" href="splide.min.css">
+    <script src="https://satantemple.github.io/splide.min.js"></script>
+    <link rel="stylesheet" href="https://satantemple.github.io/splide.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
@@ -108,28 +108,39 @@ function right01()
    <nav id="moon">
      <a href="mailto:satantemplecom@gmail.com"> <ion-icon name="mail-unread-outline"></ion-icon> Contact us</a>
    </nav>
-   <article class="love">
+   
         <div class="splide">
           <div class="splide__track">
                 <ul class="splide__list">
+                  <article class="love">
                     <li class="splide__slide">
+                      <article class="love1">
                          <div id="sigil"></div>
                          <h1>Welcome to temple of true</h1>
-                         <h2>On this site users around the world can share your own experiences about the true and love of our master.</h2>
+                         <h3>On this site users around the world can share your own experiences about the true and love of our master.</h3>
                          <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                    </article>
                     </li>
                     <li class="splide__slide">
-                         <h1>Welcome to temple of love</h1>
-                         <h2>Making regular payments you can acces to special content.</h2>
+                      <article class="love2">
+                        <div id="sigil"></div>
+                         <h2>Welcome to temple of knoledge</h2>
+                         <h3>Making regular payments you can acces to special content.</h3>
                          <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                    </article>
                     </li>
                     <li class="splide__slide">
-                    
+                    <article class="love3">
+                        <div id="sigil"></div>
+                         <h2>Welcome to temple of Satan</h2>
+                         <h3>Making regular payments you can acces to special content.</h3>
+                         <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                    </article>
                     </li>
+                </article>
                 </ul>
           </div>
         </div>
-   </article>
    <nav id="sun">
      <a href="https://www.facebook.com/satantemple"><ion-icon name="logo-facebook"></ion-icon> Members</a>
      <a href="https://biz.payulatam.com/L0ccfcfF9178D3D"><ion-icon name="logo-paypal"></ion-icon> Payments</a>
@@ -140,13 +151,19 @@ function right01()
   html{width:100%;height:100%;}
   body{width:100%;height:100%;} 
   #sigil{width:70px;height:70px;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/sigil.png)no-repeat center center;background-size:110%;;margin:0 auto;border-radius:50%;margin-bottom:30px;}
-  .send{padding:10px 50px;background:red;color:black;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;} 
+  .send{padding:10px 50px;background:red;color:black;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} 
+  #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;} 
 #sun{position:fixed;bottom:0;left:0;width:100%;height:60px;background:black;text-align:center;}
   #sun a{color:white;background:black;height:100%;display:inline-block;line-height:4;padding:0 20px;}
   #moon a{color:red;background:rgba(255,255,255,0.1);height:100%;display:inline-block;line-height:4;padding:0 20px;}
-  #temple{width:100%;height:100%;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;} .love{background:rgba(0,0,0,0.7);width:100%;height:100%;padding:100px;text-align:center;}
-  .love h1{color:white;font-size:44px;}
-  .love h2{color:white;font-size:22px;padding:20px;}
+  #temple{width:100%;height:100%;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;} 
+  .love{background:rgba(0,0,0,0.7);width:100%;height:100%;text-align:center;}
+  .love1{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
+  .love2{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
+  .love3{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
+  h1{color:white;font-size:44px;}
+  h2{color:white;font-size:44px;}
+  h3{color:white;font-size:22px;padding:20px;}
     #loader{text-align:center;z-index: 20;position: fixed;overflow: hidden;width: 100%;height: 100%;padding-top:15%;top:0;left: 0;}
     .loader{display: none;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
     .loadersm{display: block;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
@@ -181,11 +198,14 @@ function right01()
 </script>
   <!--SPLIDER-->
     <script type="text/javascript">
-        var splide = new Splide( '.splide' );
+        var splide = new Splide( '.splide', {
+  type         : 'loop',
+  autoplay     : 'play',
+  pauseOnHover : false,
+  resetProgress: false,
+} );
         splide.mount();
     </script>
-
-
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
