update love imgs

--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@ function right01()
   body{width:100%;height:100%;} 
   #sigil{width:70px;height:70px;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/sigil.png)no-repeat center center;background-size:110%;;margin:0 auto;border-radius:50%;margin-bottom:30px;}
   .send{padding:10px 50px;background:red;color:black;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} 
-  #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;} 
-#sun{position:fixed;bottom:0;left:0;width:100%;height:60px;background:black;text-align:center;}
+  #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;z-index:101;} 
+#sun{position:fixed;bottom:0;left:0;width:100%;height:60px;background:black;text-align:center;z-index:100;}
   #sun a{color:white;background:black;height:100%;display:inline-block;line-height:4;padding:0 20px;}
   #moon a{color:red;background:rgba(255,255,255,0.1);height:100%;display:inline-block;line-height:4;padding:0 20px;}
   #temple{width:100%;height:100%;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;} 
   .love{background:rgba(0,0,0,0.7);width:100%;height:100%;text-align:center;}
   .love1{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
-  .love2{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
-  .love3{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
+  .love2{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/04.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
+  .love3{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/05.jpg);no-repeat center center;background-size:100%;width:100%;height:100%;padding:100px;text-align:center;}
   h1{color:white;font-size:44px;}
   h2{color:white;font-size:44px;}
   h3{color:white;font-size:22px;padding:20px;}
