--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -117,7 +117,7 @@ function right01()
                         <article class="love">
                          <div id="sigil"></div>
                          <h1>Welcome to temple of true</h1>
-                         <h3>On this site users around the world can share your own experiences about the true and love of our master.</h3>
+                         <h3>On this site users around the world can share your own experiences about the true and knowledge of our master.</h3>
                          <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
                     </article>
                     </article>
@@ -126,7 +126,7 @@ function right01()
                       <article class="love2">
                         <article class="love">
                         <div id="sigil"></div>
-                         <h2>Welcome to temple of knoledge</h2>
+                         <h2>Welcome to temple of knowledge</h2>
                          <h3>Making regular payments you can acces to special content.</h3>
                          <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
                     </article>
@@ -137,7 +137,7 @@ function right01()
                       <article class="love">
                         <div id="sigil"></div>
                          <h2>Welcome to temple of Satan</h2>
-                         <h3>Making regular payments you can acces to special content.</h3>
+                         <h3>Download the bible of Satan by Anton Lavey and introduce yourself on Satan World.</h3>
                          <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
                     </article>
                       </article>
