--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -149,19 +149,75 @@ function right01()
      <a href="https://www.facebook.com/satantemple"><ion-icon name="logo-facebook"></ion-icon> Members</a>
      <a href="https://biz.payulatam.com/L0ccfcfF9178D3D"><ion-icon name="logo-paypal"></ion-icon> Payments</a>
    </nav>
- </section>
-
+ 
+<section class="videos">
+  <h4>Enjoy Satan Music and share with friends</h4>
+  <div class="splide" id="splide02">
+  <div class="splide__track">
+		<ul class="splide__list">
+			<li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/6XCn6mihi6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+			<li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/d5VUNmiarIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+			<li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/GYB8poTXJ4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+      <li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/RiOYzAcg1Ww" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+      <li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/VI0Z8oOQvFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+      <li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/kKMSwxGrcC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+      <li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/oTYCvOd7vaI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+      <li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/l9PqCf5b2no" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+      <li class="splide__slide">
+        <article class="video">
+			  <iframe width="100%" height="315" src="https://www.youtube.com/embed/kVHZ6yVOkUE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </article>
+			</li>
+		</ul>
+  </div>
+</div>
+</section>
+   <footer>© Copyright SatanTemple</footer>
+</section>
 <style type="text/css">
+  .videos{padding:20px;background:red;text-align:center;}
   .splide{height:100%;}
   .splide__track{height:100%;}
   .splide__list{height:100%;}
   .splide__slide{height:100%;}
-  
+  footer{background:black;color:white;text-align:center;padding:30px;}
   html{width:100%;height:100%;}
   body{width:100%;height:100%;} 
   #sigil{width:70px;height:70px;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/sigil.png)no-repeat center center;background-size:110%;;margin:0 auto;border-radius:50%;margin-bottom:10px;}
   .send{padding:10px 50px;background:red;color:black;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} 
-  #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;z-index:101;} 
+  .video{padding:10px;background:black;margin:5px;border-radius:5px;} #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;z-index:101;} 
 #sun{position:fixed;bottom:0;left:0;width:100%;height:60px;background:black;text-align:center;z-index:100;}
   #sun a{color:white;background:black;height:100%;display:inline-block;line-height:4;padding:0 20px;}
   #moon a{color:red;background:rgba(255,255,255,0.1);height:100%;display:inline-block;line-height:4;padding:0 20px;}
@@ -172,7 +228,8 @@ function right01()
   .love3{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/05.jpg);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
   h1{color:white;font-size:44px;}
   h2{color:white;font-size:44px;}
-  h3{color:white;font-size:22px;padding:q0px;}
+  h3{color:white;font-size:22px;padding:10px;}
+  h4{color:white;font-size:22px;padding:10px;}
     #loader{text-align:center;z-index: 20;position: fixed;overflow: hidden;width: 100%;height: 100%;padding-top:15%;top:0;left: 0;}
     .loader{display: none;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
     .loadersm{display: block;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
@@ -221,13 +278,28 @@ function right01()
 </script>
   <!--SPLIDER-->
     <script type="text/javascript">
+      
         var splide = new Splide( '.splide', {
   type         : 'loop',
   autoplay     : 'play',
   pauseOnHover : false,
   resetProgress: false,
+  rewind : true,
 } );
-        splide.mount();
+splide.mount();
+ 
+var splide02 = new Splide( '#splide02', {
+  type         : 'loop',
+  autoplay     : 'play',
+  pauseOnHover : false,
+  resetProgress: false,
+  perPage: 4,
+  rewind : true,
+  pagination: false,
+} );
+splide02.mount();
+
+      
     </script>
 
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
